--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="alternative" href="/atom.xml" title="Hexo" type="application/atom+xml">
   
   
-    <link rel="icon" href="/favicon.png">
+    <!-- <link rel="icon" href="/favicon.png"> -->
+    <link rel="icon" href="img/5e08ad7159c4e.64px.ico">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
   <style type="text/css">
