--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   
     <!-- <link rel="icon" href="/favicon.png"> -->
-    <link rel="icon" href="img/5e08ad7159c4e.64px.ico">
+    <link rel="icon" href="img/study.png">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
   <style type="text/css">
