--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <link rel="alternative" href="/atom.xml" title="Hexo" type="application/atom+xml">
   
   
+    <!-- <link rel="icon" href="/favicon.png"> -->
     <link rel="icon" href="/favicon.png">
-    
+
     <!-- <link rel="icon" href="img/study.png"> -->
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
@@ -103,7 +104,7 @@
 	<div class="intrude-less">
 		<header id="header" class="inner">
 			<div class="profilepic">
-				<img src="" class="js-avatar">
+				<img src="img/d66aa8d91e84319f02ad32190aaac3e11f815d341ccb4-YaC1SH_fw658.png" class="js-avatar">
 			</div>
 			<hgroup>
 			  <h1 class="header-author js-header-author">杨阳</h1>
