--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   
     <!-- <link rel="icon" href="/favicon.png"> -->
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="img/favicon.png">
 
     <!-- <link rel="icon" href="img/study.png"> -->
   
