--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   
   
     <!-- <link rel="icon" href="/favicon.png"> -->
+    <!-- <link rel="icon" href="img/favicon.png"> -->
     <link rel="icon" href="img/favicon.png">
-
     <!-- <link rel="icon" href="img/study.png"> -->
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
