--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <div class="overlay" style="background: #4d4d4d"></div>
 <div class="intrude-less">
 	<header id="header" class="inner">
-		<a href="/" class="profilepic">
-			<img src="" class="js-avatar">
+		<a href="www.xuedaowangwo.com" class="profilepic">
+			<img src="img/d66aa8d91e84319f02ad32190aaac3e11f815d341ccb4-YaC1SH_fw658.png" class="js-avatar">
 		</a>
 		<hgroup>
 		  <h1 class="header-author"><a href="/">杨阳</a></h1>
