--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="alternative" href="/atom.xml" title="Hexo" type="application/atom+xml">
   
   
-    <link rel="icon" href="img/favicon.ico">
+    <!-- <link rel="icon" href="img/favicon.ico"> -->
+    <link rel="icon" href="img/open-book.png">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
   <style type="text/css">
@@ -42,7 +43,7 @@
 <div class="overlay" style="background: #4d4d4d"></div>
 <div class="intrude-less">
 	<header id="header" class="inner">
-		<a href="www.xuedaowangwo.com" class="profilepic">
+		<a href="http://xuedaowangwo.com/" class="profilepic">
 			<img src="img/d66aa8d91e84319f02ad32190aaac3e11f815d341ccb4-YaC1SH_fw658.png" class="js-avatar">
 		</a>
 		<hgroup>
