--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   
     <!-- <link rel="icon" href="img/favicon.ico"> -->
-    <link rel="icon" href="img/open-book.png">
+    <link rel="icon" href="img/open-book2.png">
   
   <link rel="stylesheet" type="text/css" href="/./main.0cf68a.css">
   <style type="text/css">
