--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   
     <article id="post-我的第一篇博客文章" class="article article-type-post  article-index" itemscope itemprop="blogPost">
   <div class="article-inner">
-    <ul class="article-panel part-style">
+    <ul class="article-panel">
       <li>
         <div class="index-plan note-col">
           <h2 class="index-title">笔记</h2>
